fix: botones, vistas, scss, footers

--- a/lizard/src/app/categorias/categorias.page.html
+++ b/lizard/src/app/categorias/categorias.page.html
@@ -7,15 +7,17 @@
 <ion-content [fullscreen]="true">
   <br>
   <br>
-  <ion-button class="labels fuentes-cards boton-agregar" (click)="libros()" expand="full" shape="round">Libros</ion-button>
   <br>
-  <ion-button class="labels fuentes-cards boton-agregar" (click)="figuras()" expand="full" shape="round">Figuras</ion-button>
   <br>
-  <ion-button class="labels fuentes-cards boton-agregar" (click)="replicas()" expand="full" shape="round">Réplicas de Armas</ion-button>
+  <ion-button class="labels fuentes-cards boton-agregar" (click)="libros()" expand="full" shape="round"><ion-img class="iconosbotones" src="../../assets/img/botonlibros.png"></ion-img></ion-button>
   <br>
-  <ion-button class="labels fuentes-cards boton-agregar" (click)="cartas()" expand="full" shape="round">Cartas</ion-button>
+  <ion-button class="labels fuentes-cards boton-agregar" (click)="figuras()" expand="full" shape="round"><ion-img class="iconosbotones" src="../../assets/img/botonfiguras.png"></ion-img></ion-button>
   <br>
-  <ion-button class="labels fuentes-cards boton-agregar" (click)="juegos()" expand="full" shape="round">Juegos</ion-button>
+  <ion-button class="labels fuentes-cards boton-agregar" (click)="replicas()" expand="full" shape="round"><ion-img class="iconosbotones" src="../../assets/img/botonreplicas.png"></ion-img></ion-button>
+  <br>
+  <ion-button class="labels fuentes-cards boton-agregar" (click)="cartas()" expand="full" shape="round"><ion-img class="iconosbotones" src="../../assets/img/botoncartas.png"></ion-img></ion-button>
+  <br>
+  <ion-button class="labels fuentes-cards boton-agregar" (click)="juegos()" expand="full" shape="round"><ion-img class="iconosbotones" src="../../assets/img/botonjuegos.png"></ion-img></ion-button>
 </ion-content>
 
 <ion-footer>
