--- a/lizard/src/app/categorias/categorias.page.scss
+++ b/lizard/src/app/categorias/categorias.page.scss
@@ -8,9 +8,16 @@
 
 ion-button {
     --color: black
+    
 }
 
 .sombrerines {
+    display: inline-flex;
+    align-items: center;
+}
+
+.iconosbotones {
+    width: 60%;
     display: inline-flex;
     align-items: center;
 }
