--- a/lizard/src/app/login/login.page.scss
+++ b/lizard/src/app/login/login.page.scss
@@ -10,3 +10,15 @@
         background-size: contain;
 
     }
+
+    .botones-footer {
+        --ion-color-primary: crimson;
+    }
+    
+    .boton-agregar {
+        --ion-color-primary: crimson;
+    }
+    
+    ion-button {
+        --color: black
+    }
