--- a/lizard/src/app/modalpass/modalpass.page.html
+++ b/lizard/src/app/modalpass/modalpass.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="fuentes-cards">
       Nuevo Password
     </ion-title>
     <ion-buttons slot="end">
