--- a/lizard/src/app/home/home.page.scss
+++ b/lizard/src/app/home/home.page.scss
@@ -1,5 +1,29 @@
 .logo-container {
-    width: 20%;
-    display: flex;
+    width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
 
-}  
+.botones-footer {
+    --ion-color-primary: crimson;
+}
+
+.boton-agregar {
+    --ion-color-primary: crimson;
+}
+
+ion-button {
+    --color: black
+}
+
+.centrado {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ion-toolbar {
+    color: crimson;
+}
