--- a/lizard/src/app/login/login.page.html
+++ b/lizard/src/app/login/login.page.html
@@ -3,19 +3,12 @@
     <ion-img class="logo-container" src="assets/img/loginicon.png" alt="Logo de la aplicación"></ion-img>
     <br>
     <br>
-    <ion-card-content>  
-      <ion-item>
-      <ion-label position="floating" class="labels fuentes-cards"><ion-icon name="person-outline" ></ion-icon> Usuario</ion-label>
-      <ion-input [(ngModel)]="usuario" placeholder="Correo o nombre de usuario"></ion-input>
-      </ion-item>
-      <br>
-      <ion-item>
-      <ion-label position="floating" class="labels fuentes-cards"><ion-icon name="key-outline"></ion-icon> Password</ion-label>
-      <ion-input type="password" [(ngModel)]="clave" placeholder="Contraseña"></ion-input>
-      </ion-item>
-    </ion-card-content>
+      <ion-input label="Usuario" label-placement="floating" type="text" [(ngModel)]="usuario" fill="outline" class="labels fuentes-cards" shape="round"></ion-input>
+    <br>
+      <ion-input label="Contraseña" label-placement="floating" type="password" [(ngModel)]="clave" fill="outline" class="labels fuentes-cards" shape="round"></ion-input>
+
   <br>
-  <ion-button expand="block" (click)="logeado()" class="labels fuentes-cards" color="dark">Ingresar</ion-button>
+  <ion-button expand="full" (click)="logeado()" class="labels fuentes-cards boton-agregar" shape="round">Ingresar</ion-button>
   <br>
   <a href="#" [routerLink]="['/registro']" style="margin: 0 auto; display:block; text-align: center; color: rgb(255, 255, 255); font-size: 20px;" class="labels fuentes-cards" >Crear tu cuenta gratis</a>
   <br>
