--- a/lizard/src/app/top10/top10.page.scss
+++ b/lizard/src/app/top10/top10.page.scss
@@ -12,13 +12,15 @@ ion-button {
 
 table {
     width: fit-content;
-    font-size: small;
+    font-size: smaller;
     border-collapse: collapse;
     border: 1px solid;
+    background-color: black;
 }
-
-tr:nth-child(even) {background-color: #f2f2f2;}
 
 th, td {
     border-bottom: 1px solid #ddd;
+    background-color: crimson;
+    color: black;
   }
+
