--- a/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
+++ b/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="fuentes-cards">
       Agregar nueva carta
     </ion-title>
     <ion-buttons slot="end">
@@ -16,45 +16,36 @@
 <ion-content>
 
   <ion-item>
-    <ion-label position="floating" class="labels">Nombre de la carta</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Nombre</ion-label>
     <ion-input [(ngModel)]="carta.nombre" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Foto de la carta</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Foto</ion-label>
     <ion-input [(ngModel)]="carta.url_foto" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Tipo de carta</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Tipo</ion-label>
     <ion-input [(ngModel)]="carta.tipo" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Descripción </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Descripción </ion-label>
     <ion-input [(ngModel)]="carta.descripcion" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label class="labels">Fecha adquisición</ion-label>
+    <ion-label class="labels tamanoletra">Fecha adquisición</ion-label>
     <ion-input [(ngModel)]="carta.fecha_adquisicion" type="date"></ion-input>
   </ion-item>
-
-  <br>
 
   <!-- inputs de datos especificos para una carta -->
 
   <ion-item>
-    <ion-label position="floating" class="labels">Juego </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Juego </ion-label>
     <ion-input [(ngModel)]="carta.juego" type="text"></ion-input>
   </ion-item>
-
   <br>
 
   <ion-button expand="full" class="labels fuentes-cards boton-agregar" shape="round" >Agregar Carta</ion-button>
