--- a/lizard/src/app/itemlibro/itemlibro.page.html
+++ b/lizard/src/app/itemlibro/itemlibro.page.html
@@ -2,11 +2,12 @@
   <ion-toolbar>
     <ion-grid>
       <ion-row>
-        <ion-col size="3">
-          <img src="../../assets/img/LIBROICONO.png" style="width: 50%;"/>
+        <ion-col size="4">
+          <img src="../../assets/img/LIBROICONO.png" style="width: 80%;"/>
         </ion-col>  
-        <ion-col size="9">
-          <ion-title>Libro</ion-title> 
+        <ion-col size="8">
+          <br>
+          <ion-title class="fuentes-cards sombrerines">Libro</ion-title> 
         </ion-col>
       </ion-row>
     </ion-grid>    
@@ -19,63 +20,73 @@
   </ion-item>
 
   <ion-item>
-    <ion-label class="labels"><ion-icon name="book-outline"></ion-icon> Nombre: </ion-label>
+    <ion-label class="labels">Nombre </ion-label>
     <ion-input readonly [(ngModel)]="libro.nombre" id="nombre" type="text" ></ion-input>
-    <ion-button (click)="cambiarEstadoEditable('nombre')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+    <ion-button class="boton-agregar" (click)="cambiarEstadoEditable('nombre')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
   </ion-item>
 
   <ion-item>
-    <ion-label  class="labels"><ion-icon name="link-outline"></ion-icon> Url foto: </ion-label>
+    <ion-label  class="labels">Url foto </ion-label>
     <ion-input readonly [(ngModel)]="libro.url_foto" id="url_foto" type="text" ></ion-input>
-    <ion-button (click)="cambiarEstadoEditable('url_foto')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+    <ion-button class="boton-agregar" (click)="cambiarEstadoEditable('url_foto')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
   </ion-item>
 
   <ion-item>
-    <ion-label  class="labels"><ion-icon name="book-outline"></ion-icon> Tipo: </ion-label>
+    <ion-label  class="labels">Tipo </ion-label>
     <ion-input readonly [(ngModel)]="libro.tipo" id="tipo" type="text" ></ion-input>
-    <ion-button (click)="cambiarEstadoEditable('tipo')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+    <ion-button class="boton-agregar" (click)="cambiarEstadoEditable('tipo')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
   </ion-item>
 
   <ion-item>
-    <ion-label class="labels"><ion-icon name="calendar-outline"></ion-icon>  Fecha adquisición</ion-label>
+    <ion-label class="labels">Fecha adquisición</ion-label>
     <ion-input readonly [(ngModel)]="libro.fecha_adquisicion" id="fecha_adquisicion" type="text"></ion-input>
-    <ion-button (click)="cambiarEstadoEditable('fecha_adquisicion')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
+    <ion-button class="boton-agregar" (click)="cambiarEstadoEditable('fecha_adquisicion')"><ion-icon name="pencil-outline"></ion-icon></ion-button>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon>Autor:  </ion-label>
+    <ion-label position="floating" class="labels">Autor  </ion-label>
     <ion-input readonly [(ngModel)]="libro.autor" type="text" ></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon>Editorial:  </ion-label>
+    <ion-label position="floating" class="labels">Editorial </ion-label>
     <ion-input readonly [(ngModel)]="libro.editorial" type="text" ></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating" class="labels"><ion-icon name="book-outline"></ion-icon>Genero:  </ion-label>
+    <ion-label position="floating" class="labels">Genero  </ion-label>
     <ion-input readonly [(ngModel)]="libro.genero" type="text" ></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label  class="labels">Paginas:  </ion-label>
+    <ion-label  class="labels">Paginas  </ion-label>
     <ion-input readonly [(ngModel)]="libro.paginas" type="text" ></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label  class="labels">Año:  </ion-label>
+    <ion-label  class="labels">Año  </ion-label>
     <ion-input readonly [(ngModel)]="libro.anio_publicacion" type="text" ></ion-input>
   </ion-item>
 
+  <div style="text-align: center;">
+  <ion-button class="boton-agregar" (click)="actualizarItem()" shape="round">Modificar</ion-button>
+  <ion-button class="boton-agregar" (click)="eliminarItem()" shape="round">Eliminar</ion-button>
+  </div>
 
-  <ion-button (click)="actualizarItem()">Modificar</ion-button>
-  <ion-button (click)="eliminarItem()">Eliminar</ion-button>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-button [routerLink]="['/login']"><ion-icon name="exit-outline"></ion-icon></ion-button>
-    <ion-button (click)="home()"><ion-icon name="home-outline"></ion-icon></ion-button>
-    <ion-button (click)="crearTarjeta()"><ion-icon name="id-card-outline"></ion-icon></ion-button>
+  <ion-toolbar mode="ios" class="botones-footer">
+    <div style="text-align: center;">
+    <ion-button [routerLink]="['/login']">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
+    <ion-button  (click)="home()">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-button>
+    <ion-button (click)="crearTarjeta()">
+      <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+  </div>
   </ion-toolbar>
 </ion-footer>
