--- a/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
+++ b/lizard/src/app/modal-crear-libro/modal-crear-libro.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="fuentes-cards">
       Agregar nuevo libro
     </ion-title>
     <ion-buttons slot="end">
@@ -16,84 +16,64 @@
 <ion-content>
 
   <ion-item>
-    <ion-label position="floating" class="labels">Nombre del libro</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Nombre</ion-label>
     <ion-input [(ngModel)]="libro.nombre" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Foto del libro</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Foto</ion-label>
     <ion-input [(ngModel)]="libro.url_foto" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Tipo de libro</ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Tipo</ion-label>
     <ion-input [(ngModel)]="libro.tipo" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Descripción </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Descripción </ion-label>
     <ion-input [(ngModel)]="libro.descripcion" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label class="labels">Fecha adquisición</ion-label>
+    <ion-label class="labels tamanoletra">Fecha adquisición</ion-label>
     <ion-input [(ngModel)]="libro.fecha_adquisicion" type="date"></ion-input>
   </ion-item>
-
-  <br>
 
   <!-- inputs de datos especificos para un libro -->
 
   <ion-item>
-    <ion-label position="floating" class="labels">Autor </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Autor </ion-label>
     <ion-input [(ngModel)]="libro.autor" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Editorial </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Editorial </ion-label>
     <ion-input [(ngModel)]="libro.editorial" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Genero </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Genero </ion-label>
     <ion-input [(ngModel)]="libro.genero" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Edición </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Edición </ion-label>
     <ion-input [(ngModel)]="libro.edicion" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">ISBN </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">ISBN </ion-label>
     <ion-input [(ngModel)]="libro.isbn" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Paginas </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Paginas </ion-label>
     <ion-input [(ngModel)]="libro.paginas" type="text"></ion-input>
   </ion-item>
 
-  <br>
-
   <ion-item>
-    <ion-label position="floating" class="labels">Año de publicación </ion-label>
+    <ion-label position="floating" class="labels tamanoletra">Año de publicación </ion-label>
     <ion-input [(ngModel)]="libro.anio_publicacion" type="text"></ion-input>
   </ion-item>
 
