--- a/lizard/src/app/top10/top10.page.scss
+++ b/lizard/src/app/top10/top10.page.scss
@@ -24,3 +24,10 @@ th, td {
     color: black;
   }
 
+.logo-container {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}  
+
