--- a/lizard/src/app/juegos/juegos.page.html
+++ b/lizard/src/app/juegos/juegos.page.html
@@ -30,11 +30,14 @@
     <ion-button [routerLink]="['/login']">
       <ion-icon name="exit-outline"></ion-icon>
     </ion-button>
-    <ion-button  (click)="home()">
+    <ion-button [routerLink]="['/home']">
       <ion-icon name="home-outline"></ion-icon>
     </ion-button>
-    <ion-button (click)="crearTarjeta()">
+    <ion-button [routerLink]="['/tarjeta']">
       <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="arrow-undo-outline"></ion-icon>
     </ion-button>
   </div>
   </ion-toolbar>
