--- a/lizard/src/app/titulosylogros/titulosylogros.page.html
+++ b/lizard/src/app/titulosylogros/titulosylogros.page.html
@@ -65,6 +65,9 @@
     <ion-button [routerLink]="['/tarjeta']">
       <ion-icon name="id-card-outline"></ion-icon>
     </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="arrow-undo-outline"></ion-icon>
+    </ion-button>
   </div>
   </ion-toolbar>
 </ion-footer>
