--- a/lizard/src/app/acercade/acercade.page.html
+++ b/lizard/src/app/acercade/acercade.page.html
@@ -10,9 +10,9 @@
   </ion-item>
   <br>
   <ion-list>
-    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD01.png" style="width: 20%">     Genoveva Villablanca</ion-label></ion-item>
-    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD02.png" style="width: 20%">     Wladimir Urzúa</ion-label></ion-item>
-    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD03.png" style="width: 20%">     Félix Donoso</ion-label></ion-item>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD01.png" style="width: 20%">&nbsp;&nbsp;&nbsp;Genoveva Villablanca</ion-label></ion-item>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD02.png" style="width: 20%">&nbsp;&nbsp;&nbsp;Wladimir Urzúa</ion-label></ion-item>
+    <ion-item><ion-label class="sombrerines fuentes-cards"><img src="../../assets/img/WIZARD03.png" style="width: 20%">&nbsp;&nbsp;&nbsp;Félix Donoso</ion-label></ion-item>
   </ion-list>
   
   <ion-card>
@@ -44,6 +44,9 @@
     </ion-button>
     <ion-button [routerLink]="['/tarjeta']">
       <ion-icon name="id-card-outline"></ion-icon>
+    </ion-button>
+    <ion-button [routerLink]="['/tarjeta']">
+      <ion-icon name="arrow-undo-outline"></ion-icon>
     </ion-button>
   </div>
   </ion-toolbar>
