--- a/lizard/src/app/cartas/cartas.page.html
+++ b/lizard/src/app/cartas/cartas.page.html
@@ -23,19 +23,21 @@
     </ion-row>
   </ion-grid>
 
-</ion-content>
-<ion-footer>
-  <ion-toolbar mode="ios" class="botones-footer">
-    <div style="text-align: center;">
-    <ion-button [routerLink]="['/login']">
-      <ion-icon name="exit-outline"></ion-icon>
-    </ion-button>
-    <ion-button  (click)="home()">
-      <ion-icon name="home-outline"></ion-icon>
-    </ion-button>
-    <ion-button (click)="crearTarjeta()">
-      <ion-icon name="id-card-outline"></ion-icon>
-    </ion-button>
-  </div>
-  </ion-toolbar>
-</ion-footer>
+  <ion-footer>
+    <ion-toolbar mode="ios" class="botones-footer">
+      <div style="text-align: center;">
+      <ion-button [routerLink]="['/login']">
+        <ion-icon name="exit-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/home']">
+        <ion-icon name="home-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/tarjeta']">
+        <ion-icon name="id-card-outline"></ion-icon>
+      </ion-button>
+      <ion-button [routerLink]="['/tarjeta']">
+        <ion-icon name="arrow-undo-outline"></ion-icon>
+      </ion-button>
+    </div>
+    </ion-toolbar>
+  </ion-footer>
