feat: funcion atras en footers, todas las vistas con navegacion

--- a/lizard/src/app/acercade/acercade.page.html
+++ b/lizard/src/app/acercade/acercade.page.html
@@ -45,7 +45,7 @@
     <ion-button [routerLink]="['/tarjeta']">
       <ion-icon name="id-card-outline"></ion-icon>
     </ion-button>
-    <ion-button [routerLink]="['/tarjeta']">
+    <ion-button (click)="volverAtras()">
       <ion-icon name="arrow-undo-outline"></ion-icon>
     </ion-button>
   </div>
