--- a/lizard/src/app/home/home.page.html
+++ b/lizard/src/app/home/home.page.html
@@ -52,6 +52,9 @@
     <ion-button [routerLink]="['/tarjeta']">
       <ion-icon name="id-card-outline"></ion-icon>
     </ion-button>
+    <ion-button (click)="volverAtras()">
+      <ion-icon name="arrow-undo-outline"></ion-icon>
+    </ion-button>
   </div>
   </ion-toolbar>
 </ion-footer>
