fix: evento click para agregar carta

--- a/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
+++ b/lizard/src/app/modal-crear-carta/modal-crear-carta.page.html
@@ -48,6 +48,6 @@
   </ion-item>
   <br>
 
-  <ion-button expand="full" class="labels fuentes-cards boton-agregar" shape="round" >Agregar Carta</ion-button>
+  <ion-button (click)="agregarItem()" expand="full" class="labels fuentes-cards boton-agregar" shape="round" >Agregar Carta</ion-button>
 
 </ion-content>
